Update Client: initialize appstate from authorization

--- a/OnlineShop/Client/App.razor
+++ b/OnlineShop/Client/App.razor
@@ -1,7 +1,10 @@
 @using OnlineShop.Client.Services
 @using System.Net.Http.Headers
+@using System.Net
+@using OnlineShop.Client.Services.State
 @inject CookieStorage _cookieStorage
 @inject HttpClient _httpClient
+@inject AppState _appState
 
 <MudThemeProvider/>
 <MudDialogProvider/>
@@ -23,6 +26,13 @@
         if (token != "")
         {
             _httpClient.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("Bearer", token);
+            var responseMessage = await _httpClient.GetAsync("api/Auth/GetUserInfo");
+
+            if (responseMessage.StatusCode == HttpStatusCode.OK)
+            {
+                var username = await responseMessage.Content.ReadAsStringAsync();
+                _appState.UserState.UserName = username;
+            }
         }
     }
 
