Add Profile page prototype

--- a/OnlineShop/Client/Shared/NavMenu.razor
+++ b/OnlineShop/Client/Shared/NavMenu.razor
@@ -19,6 +19,9 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </MudNavLink>
             <MudNavLink Href="/editor">Editor</MudNavLink>
+            <MudNavLink Href="/profile" Icon="@Icons.Filled.Person">
+                Profile
+            </MudNavLink>
         </MudNavMenu>
     </MudDrawerContainer>
 </MudDrawer>
