Update NavMenu: use material icons

--- a/OnlineShop/Client/Shared/NavMenu.razor
+++ b/OnlineShop/Client/Shared/NavMenu.razor
@@ -9,16 +9,18 @@
 
     <MudDrawerContainer>
         <MudNavMenu>
-            <MudNavLink Href="">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <MudNavLink Href="" Icon="@Icons.Filled.Home">
+                Home
             </MudNavLink>
-            <MudNavLink Href="/counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <MudNavLink Href="/counter" Icon="@Icons.Filled.AddCircleOutline">
+                Counter
             </MudNavLink>
-            <MudNavLink Href="/fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <MudNavLink Href="/fetchdata" Icon="@Icons.Filled.ViewList">
+                Fetch data
             </MudNavLink>
-            <MudNavLink Href="/editor">Editor</MudNavLink>
+            <MudNavLink Href="/editor" Icon="@Icons.Filled.Architecture">
+                Editor
+            </MudNavLink>
             <MudNavLink Href="/profile" Icon="@Icons.Filled.Person">
                 Profile
             </MudNavLink>
