Fix NavMenu: change home url

--- a/OnlineShop/Client/Shared/MainLayout.razor
+++ b/OnlineShop/Client/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
         @if (!navMenuOpen)
         {
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="DrawerToggle"/>
-            <MudLink Href="/" Underline="Underline.None" Color="Color.Default" Typo="Typo.h5" Class="ml-3 my-auto" Style="color: #fefefe !important;">
+            <MudLink Href="/main" Underline="Underline.None" Color="Color.Default" Typo="Typo.h5" Class="ml-3 my-auto" Style="color: #fefefe !important;">
                 OnlineShop
             </MudLink>
         }
