--- a/OnlineShop/Client/Shared/NavMenu.razor
+++ b/OnlineShop/Client/Shared/NavMenu.razor
@@ -2,14 +2,14 @@
 
     <MudDrawerHeader Style="height: calc(var(--mud-appbar-height) - var(--mud-appbar-height)/4);">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="onClicked"/>
-        <MudLink Href="/" Underline="Underline.None" Color="Color.Default" Typo="Typo.h5" Class="ml-3 my-auto">
+        <MudLink Href="/main" Underline="Underline.None" Color="Color.Default" Typo="Typo.h5" Class="ml-3 my-auto">
             OnlineShop
         </MudLink>
     </MudDrawerHeader>
 
     <MudDrawerContainer>
         <MudNavMenu>
-            <MudNavLink Href="" Icon="@Icons.Filled.Home">
+            <MudNavLink Href="/main" Icon="@Icons.Filled.Home">
                 Home
             </MudNavLink>
             <MudNavLink Href="/counter" Icon="@Icons.Filled.AddCircleOutline">
